--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
-  <body>
-    <header class="header">
+  <body id="body">
+    <header class="header latPadding">
       <nav class="navBar flex">
         <div class="navBar__logo&links flex">
           <div class="navBar__logo">
@@ -31,8 +31,8 @@
           </div>
           <div class="navBar__menu flex">
             <div class="navBar__menu-linkContainer flex flex-col">
-              <span>Product</span>
-              <div class="dropdown flex flex-col">
+              <span id=1 >Product <img src="./images/icon-arrow-light.svg" alt=""></span>
+              <div id="productDropdown" class="dropdown flex flex-col">
                 <a>
                   <p>Overview</p>
                 </a>
@@ -51,8 +51,8 @@
               </div>
             </div>
             <div class="navBar__menu-linkContainer flex flex-col">
-              <span>Company</span>
-              <div class="dropdown flex flex-col">
+              <span id=2>Company <img src="./images/icon-arrow-light.svg" alt=""></span>
+              <div id="companyDropdown" class="dropdown flex flex-col">
                 <a>
                   <p>About</p>
                 </a>
@@ -68,8 +68,8 @@
               </div>
             </div>
             <div class="navBar__menu-linkContainer flex flex-col">
-              <span>Connect</span>
-              <div class="dropdown flex flex-col">
+              <span id=3>Connect <img src="./images/icon-arrow-light.svg" alt=""></span>
+              <div id="connectDropdown" class="dropdown flex flex-col">
                 <a>
                   <p>Contact</p>
                 </a>
@@ -134,5 +134,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div>
+    <script src="./js/main.js"></script>
   </body>
 </html>
