--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </a>
               </div>
             </div>
-            <hr>
+            <hr />
             <div class="mobile__cta flex flex-col">
               <button class="button mobileLogin">Login</button>
               <button class="button mobileSignUp">Sign Up</button>
@@ -132,34 +132,51 @@
         </div>
       </div>
     </header>
-    <main>
-      <div class=""></div>
+    <main class="main latPadding">
+      <div class="designedForFuture">
+        <h2 class="designedForFuture__title">Designed for the future</h2>
+        <div class="designedForFuture__container flex">
+          <div class="designedForFuture__container-info flex flex-col">
+            <h3>Introducing an extensible editor</h3>
+            <p>
+              Blogr features an exceedingly intuitive interface which lets you
+              focus on one thing: creating content. The editor supports
+              management of multiple blogs and allows easy manipulation of
+              embeds such as images, videos, and Markdown. Extensibility with
+              plugins and themes provide easy ways to add functionality or
+              change the looks of a blog.
+            </p>
+            <h3>Robust content management</h3>
+            <p>
+              Flexible content management enables users to easily move through
+              posts. Increase the usability of your blog by adding customized
+              categories, sections, format, or flow. With this functionality,
+              you're in full control.
+            </p>
+          </div>
+          <div class="designedForFuture__container-img">            
+            <img src="./images/illustration-editor-desktop.svg" alt="">            
+          </div>
+        </div>
+      </div>
       <div class=""></div>
       <div class=""></div>
     </main>
     <footer></footer>
 
-    Designed for the future Introducing an extensible editor Blogr features an
-    exceedingly intuitive interface which lets you focus on one thing: creating
-    content. The editor supports management of multiple blogs and allows easy
-    manipulation of embeds such as images, videos, and Markdown. Extensibility
-    with plugins and themes provide easy ways to add functionality or change the
-    looks of a blog. Robust content management Flexible content management
-    enables users to easily move through posts. Increase the usability of your
-    blog by adding customized categories, sections, format, or flow. With this
-    functionality, you’re in full control. State of the Art Infrastructure With
-    reliability and speed in mind, worldwide data centers provide the backbone
-    for ultra-fast connectivity. This ensures your site will load instantly, no
-    matter where your readers are, keeping your site competitive. Free, open,
-    simple Blogr is a free and open source application backed by a large
-    community of helpful developers. It supports features such as code syntax
-    highlighting, RSS feeds, social media integration, third-party commenting
-    tools, and works seamlessly with Google Analytics. The architecture is clean
-    and is relatively easy to learn. Powerful tooling Batteries included. We
-    built a simple and straightforward CLI tool that makes customization and
-    deployment a breeze, but capable of producing even the most complicated
-    sites. Product Overview Pricing Marketplace Features Integrations Companyf
-    About Team Blog Careers Connect Contact Newsletter LinkedIn
+    State of the Art Infrastructure With reliability and speed in mind,
+    worldwide data centers provide the backbone for ultra-fast connectivity.
+    This ensures your site will load instantly, no matter where your readers
+    are, keeping your site competitive. Free, open, simple Blogr is a free and
+    open source application backed by a large community of helpful developers.
+    It supports features such as code syntax highlighting, RSS feeds, social
+    media integration, third-party commenting tools, and works seamlessly with
+    Google Analytics. The architecture is clean and is relatively easy to learn.
+    Powerful tooling Batteries included. We built a simple and straightforward
+    CLI tool that makes customization and deployment a breeze, but capable of
+    producing even the most complicated sites. Product Overview Pricing
+    Marketplace Features Integrations Companyf About Team Blog Careers Connect
+    Contact Newsletter LinkedIn
 
     <div class="attribution">
       Challenge by
