--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
             </p>
           </div>
           <div class="designedForFuture__container-img">            
-            <img src="./images/illustration-editor-desktop.svg" alt="">            
+            <img class="imgDesktop" src="./images/illustration-editor-desktop.svg" alt="">            
+            <img class="imgMobile" src="./images/illustration-editor-mobile.svg" alt="">            
           </div>
         </div>
       </div>
