--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         </div>
       </div>
     </header>
-    <main class="main latPadding">
-      <div class="designedForFuture">
+    <main class="main">
+      <div class="designedForFuture latPadding">
         <h2 class="designedForFuture__title">Designed for the future</h2>
         <div class="designedForFuture__container flex">
           <div class="designedForFuture__container-info flex flex-col">
@@ -154,30 +154,48 @@
               you're in full control.
             </p>
           </div>
-          <div class="designedForFuture__container-img">            
-            <img class="imgDesktop" src="./images/illustration-editor-desktop.svg" alt="">            
-            <img class="imgMobile" src="./images/illustration-editor-mobile.svg" alt="">            
+          <div class="designedForFuture__container-img">
+            <img
+              class="imgDesktop"
+              src="./images/illustration-editor-desktop.svg"
+              alt=""
+            />
+            <img
+              class="imgMobile"
+              src="./images/illustration-editor-mobile.svg"
+              alt=""
+            />
           </div>
         </div>
       </div>
-      <div class=""></div>
+      <div class="stateOfArt flex latPadding">
+        <div class="stateOfArt__phones">
+          <img src="./images/illustration-phones.svg" alt="" />
+        </div>
+        <div class="stateOfArt__info">
+          <h2>State of the Art Infrastructure</h2>
+          <p>
+            With reliability and speed in mind, worldwide data centers provide
+            the backbone for ultra-fast connectivity. This ensures your site
+            will load instantly, no matter where your readers are, keeping your
+            site competitive.
+          </p>
+        </div>
+      </div>
       <div class=""></div>
     </main>
     <footer></footer>
 
-    State of the Art Infrastructure With reliability and speed in mind,
-    worldwide data centers provide the backbone for ultra-fast connectivity.
-    This ensures your site will load instantly, no matter where your readers
-    are, keeping your site competitive. Free, open, simple Blogr is a free and
-    open source application backed by a large community of helpful developers.
-    It supports features such as code syntax highlighting, RSS feeds, social
-    media integration, third-party commenting tools, and works seamlessly with
-    Google Analytics. The architecture is clean and is relatively easy to learn.
-    Powerful tooling Batteries included. We built a simple and straightforward
-    CLI tool that makes customization and deployment a breeze, but capable of
-    producing even the most complicated sites. Product Overview Pricing
-    Marketplace Features Integrations Companyf About Team Blog Careers Connect
-    Contact Newsletter LinkedIn
+    Free, open, simple Blogr is a free and open source application backed by a
+    large community of helpful developers. It supports features such as code
+    syntax highlighting, RSS feeds, social media integration, third-party
+    commenting tools, and works seamlessly with Google Analytics. The
+    architecture is clean and is relatively easy to learn. Powerful tooling
+    Batteries included. We built a simple and straightforward CLI tool that
+    makes customization and deployment a breeze, but capable of producing even
+    the most complicated sites. Product Overview Pricing Marketplace Features
+    Integrations Companyf About Team Blog Careers Connect Contact Newsletter
+    LinkedIn
 
     <div class="attribution">
       Challenge by
