--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="stateOfArt__phones">
           <img src="./images/illustration-phones.svg" alt="" />
         </div>
-        <div class="stateOfArt__info">
+        <div class="stateOfArt__info flex flex-col">
           <h2>State of the Art Infrastructure</h2>
           <p>
             With reliability and speed in mind, worldwide data centers provide
