--- a/index.html
+++ b/index.html
@@ -182,20 +182,35 @@
           </p>
         </div>
       </div>
-      <div class=""></div>
+      <div class="freeOpenSimple">
+        <div class="freeOpenSimple__container flex latPadding">
+          <div class="freeOpenSimple__container-img">
+            <img src="./images/illustration-laptop-desktop.svg" alt="" />
+          </div>
+          <div class="freeOpenSimple__container-info flex flex-col">
+            <h3>Free, open, simple</h3>
+            <p>
+              Blogr is a free and open source application backed by a large
+              community of helpful developers. It supports features such as code
+              syntax highlighting, RSS feeds, social media integration,
+              third-party commenting tools, and works seamlessly with Google
+              Analytics. The architecture is clean and is relatively easy to
+              learn.
+            </p>
+            <h3>Powerful tooling</h3>
+            <p>
+              Batteries included. We built a simple and straightforward CLI tool
+              that makes customization and deployment a breeze, but capable of
+              producing even the most complicated sites.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
 
-    Free, open, simple Blogr is a free and open source application backed by a
-    large community of helpful developers. It supports features such as code
-    syntax highlighting, RSS feeds, social media integration, third-party
-    commenting tools, and works seamlessly with Google Analytics. The
-    architecture is clean and is relatively easy to learn. Powerful tooling
-    Batteries included. We built a simple and straightforward CLI tool that
-    makes customization and deployment a breeze, but capable of producing even
-    the most complicated sites. Product Overview Pricing Marketplace Features
-    Integrations Companyf About Team Blog Careers Connect Contact Newsletter
-    LinkedIn
+    Product Overview Pricing Marketplace Features Integrations Companyf About
+    Team Blog Careers Connect Contact Newsletter LinkedIn
 
     <div class="attribution">
       Challenge by
