--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
       <div class="freeOpenSimple">
         <div class="freeOpenSimple__container flex latPadding">
           <div class="freeOpenSimple__container-img">
-            <img src="./images/illustration-laptop-desktop.svg" alt="" />
+            <img class="laptopDesktop" src="./images/illustration-laptop-desktop.svg" alt="" />
+            <img class="laptopMobile" src="./images/illustration-laptop-mobile.svg" alt="" />
           </div>
           <div class="freeOpenSimple__container-info flex flex-col">
             <h3>Free, open, simple</h3>
