'footer' desktop design

--- a/index.html
+++ b/index.html
@@ -208,7 +208,34 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer__container flex latPadding">
+        <div class="footer__container-logo">
+          <img src="./images/logo.svg" alt="">
+        </div>
+        <div class="footer__container-product flex flex-col">
+          <span><a href="/">Product</a></span>
+          <span><a href="/">Overview</a></span>
+          <span><a href="/">Pricing</a></span>
+          <span><a href="/">Marketplace</a></span>
+          <span><a href="/">Features</a></span>
+          <span><a href="/">Integrations</a></span>
+        </div>
+        <div class="footer__container-company flex flex-col">
+          <span><a href="/">Company</a></span>
+          <span><a href="/">About</a></span>
+          <span><a href="/">Team</a></span>
+          <span><a href="/">Blog</a></span>
+          <span><a href="/">Careers</a></span>          
+        </div>
+        <div class="footer__container-connect flex flex-col">
+          <span><a href="/">Connect</a></span>
+          <span><a href="/">Contact</a></span>
+          <span><a href="/">Newsletter</a></span>
+          <span><a href="/">LinkedIn</a></span>
+        </div>
+      </div>
+    </footer>
 
     Product Overview Pricing Marketplace Features Integrations Companyf About
     Team Blog Careers Connect Contact Newsletter LinkedIn
