--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           <img src="./images/logo.svg" alt="">
         </div>
         <div class="footer__container-product flex flex-col">
-          <span><a href="/">Product</a></span>
+          <span>Product</span>
           <span><a href="/">Overview</a></span>
           <span><a href="/">Pricing</a></span>
           <span><a href="/">Marketplace</a></span>
@@ -222,29 +222,25 @@
           <span><a href="/">Integrations</a></span>
         </div>
         <div class="footer__container-company flex flex-col">
-          <span><a href="/">Company</a></span>
+          <span>Company</span>
           <span><a href="/">About</a></span>
           <span><a href="/">Team</a></span>
           <span><a href="/">Blog</a></span>
           <span><a href="/">Careers</a></span>          
         </div>
         <div class="footer__container-connect flex flex-col">
-          <span><a href="/">Connect</a></span>
+          <span>Connect</span>
           <span><a href="/">Contact</a></span>
           <span><a href="/">Newsletter</a></span>
           <span><a href="/">LinkedIn</a></span>
         </div>
       </div>
-    </footer>
-
-    Product Overview Pricing Marketplace Features Integrations Companyf About
-    Team Blog Careers Connect Contact Newsletter LinkedIn
-
+    </footer>    
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Aldo A. Trujano</a>.
     </div>
     <script src="./js/main.js"></script>
   </body>
