--- a/index.html
+++ b/index.html
@@ -215,32 +215,32 @@
         </div>
         <div class="footer__container-product flex flex-col">
           <span>Product</span>
-          <span><a href="/">Overview</a></span>
-          <span><a href="/">Pricing</a></span>
-          <span><a href="/">Marketplace</a></span>
-          <span><a href="/">Features</a></span>
-          <span><a href="/">Integrations</a></span>
+          <span><a href="#">Overview</a></span>
+          <span><a href="#">Pricing</a></span>
+          <span><a href="#">Marketplace</a></span>
+          <span><a href="#">Features</a></span>
+          <span><a href="#">Integrations</a></span>
         </div>
         <div class="footer__container-company flex flex-col">
           <span>Company</span>
-          <span><a href="/">About</a></span>
-          <span><a href="/">Team</a></span>
-          <span><a href="/">Blog</a></span>
-          <span><a href="/">Careers</a></span>          
+          <span><a href="#">About</a></span>
+          <span><a href="#">Team</a></span>
+          <span><a href="#">Blog</a></span>
+          <span><a href="#">Careers</a></span>          
         </div>
         <div class="footer__container-connect flex flex-col">
           <span>Connect</span>
-          <span><a href="/">Contact</a></span>
-          <span><a href="/">Newsletter</a></span>
-          <span><a href="/">LinkedIn</a></span>
+          <span><a href="#">Contact</a></span>
+          <span><a href="#">Newsletter</a></span>
+          <span><a href="#">LinkedIn</a></span>
         </div>
       </div>
     </footer>    
-    <div class="attribution">
+    <div class="attribution latPadding">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Aldo A. Trujano</a>.
+      >.<br>Coded by <a href="#">Aldo A. Trujano</a>.
     </div>
     <script src="./js/main.js"></script>
   </body>
